<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="locationValues">
        <item>Select Location</item>
        <item>MUMBAI</item>
        <item>PUNE</item>
        <item>NASHIK</item>
    </string-array>

    <string name="app_name">PCPL</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_third_screen">ThirdScreenActivity</string>
    <string name="title_activity_second_screen">SecondScreenActivity</string>
    <string name="client">Client</string>
    <string name="customer">Customer</string>
    <string name="contact">Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="area">Area</string>
    <string name="branch">Branch</string>
    <string name="case_no">Case No</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="Mobile">Mobile No</string>
    <string name="address">Address</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_buildingdetails">Buildingdetails</string>
    <string name="title_activity_carpetdetails">Carpetdetails</string>
    <string name="title_activity_flatspecifications">Flatspecifications</string>
    <string name="title_activity_requestdetails">Requestdetails</string>
    <string name="title_activity_locationdetails">Locationdetails</string>
    <string name="title_activity_projectdetails">Projectdetails</string>
    <string name="title_activity_roomdetails">Roomdetails</string>
    <string name="title_activity_flowerbeddetails">Flowerbeddetails</string>
    <string name="title_activity_layoutdetails">Layoutdetails</string>
    <string name="title_activity_under_construction">UnderConstruction</string>
    <string name="ft">ft</string>
    <string name="sqft">sqft</string>
    <string name="amout">Amount</string>
    <string name="total">Total</string>
    <string name="rooms">Rooms</string>
    <string name="roomdetails">Room Details</string>
    <string name="carpetdetails">Carpet Details</string>
    <string name="flowerbeddetails">Flowerbed Details</string>
    <string name="flooring">Flooring</string>
    <string name="doorsdiscription">  Doors Description</string>
    <string name="windowsdiscription">Windows Description</string>
    <string name="wctype">W/C Type</string>
    <string name="kitchenplatform">Kitchen Platform</string>
    <string name="carpetarea">Carpet Area</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="Totalarea">Total Area</string>
    <string name="flowerbeds">Flower Beds</string>
    <string name="save">Save</string>
    <string name="developed">Developed</string>
    <string name="underconstruction">Under Construction</string>
    <string name="Enginner">Engineer</string>
    <string name="CustomerName">Customer Name</string>
    <string name="ownername">Owner Name</string>
    <string name="Address">Address 1</string>
    <string name="Address2">Nearby Landmark</string>
    <string name="Address3">Road Name</string>
    <string name="Area">Area</string>
    <string name="personmet">Person Met</string>
    <string name="Occupant">Occupant</string>
    <string name="occuped">Occupied</string>
    <string name="Bankname">Bank Name</string>
    <string name="nameofboard">Name Of Board</string>
    <string name="Location">Location/Area</string>
    <string name="PINCODE">Pincode</string>
    <string name="propertytype">Property Type</string>
    <string name="type">Type</string>
    <string name="Site">Site</string>
    <string name="North">North</string>
    <string name="East">East</string>
    <string name="Nearestrailwaystation">Nearest Railway Station</string>
    <string name="Nearestbusstop">Nearest Bus Stop</string>
    <string name="Nearesthospital">Nearest hospital</string>
    <string name="longitude">Longitude</string>
    <string name="autoavailable"> Taxi</string>
    <string name="class1">Class</string>
    <string name="view">View</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="distance1">Distance</string>
    <string name="distance2">Distance</string>
    <string name="distance3">Distance</string>
    <string name="Latitude">Latitude</string>
    <string name="kms">Kms</string>
    <string name="mins">Mins</string>
    <string name="buildername">Building Name</string>
    <string name="planno">Plan No/OC No/BCC No</string>
    <string name="ccno">CC No</string>
    <string name="societyno">Society Reg.No</string>
    <string name="societyname">Society Name</string>
    <string name="Unitdetails">Unit Details</string>
    <string name="totalnooffloors">Total No Of Floors</string>
    <string name="projectstartdate">Project Start Date</string>
    <string name="Stageofconstruction">Stage Of Construction</string>
    <string name="plinthcomplited">Plinth Completed</string>
    <string name="rcccompleted">RCC Completed</string>
    <string name="externalbrickworkcompletedfrom">External brick Work CompletedFrom</string>
    <string name="externalplastercompleted">External Plaster Completed</string>
    <string name="internalpaintingcompleted">Internal Painting Completed </string>
    <string name="woodworker">Woodwork/Plumbing/Electrification Completed</string>
    <string name="woodworker_label">Woodwork/Plumbing</string>
    <string name="liftinstalled">Lift Installed</string>
    <string name="yearofconstruction">Year Of Construction</string>
    <string name="pcarpetarea">Carpet Area(As Per Site)</string>
    <string name="flooerise">Floor Rise</string>
    <string name="othercharges">Other Charges</string>
    <string name="Marketraterange">Market Rate Range</string>
    <string name="ageofbuilding">Age OF Building</string>
    <string name="floor">Floor</string>
    <string name="other">Other</string>
    <string name="externalpaintingcompleted">External Painting Completed</string>
    <string name="flooringcompleted">Flooring Completed</string>
    <string name="internalplastercompleted">Internal Plaster Completed</string>
    <string name="internalbrickworkcompleted">Internal Brickwork Completed</string>
    <string name="projectcompletiondate">Project Completion Date</string>
    <string name="Noofslabs">No OF Slabs</string>
    <string name="sharedistinctiveno">Share Distinctive No</string>
    <string name="ShareCertificationno">Share Certification No</string>
    <string name="architech">Architech</string>
    <string name="year">Years</string>
    <string name="rsfloor">Rs/Floor</string>
    <string name="rs">Rs</string>
    <string name="rssqft">Rs/Sqft</string>
    <string name="Structuretype">Structure Type</string>
    <string name="floors">Floors</string>
    <string name="noofflats">No.Of Flats/Floor</string>
    <string name="noofgate">No Of Gates</string>
    <string name="noofwings">No.OfWings</string>
    <string name="externalconstructionquailty">External Construction Quality</string>
    <string name="qualityofinfrastructure">Quality Of InfraStructure</string>
    <string name="Civicamenities">Civic Amenities</string>
    <string name="nooflifts">No of Lifts</string>
    <string name="internalconstruction">Internal Construction     Quality</string>
    <string name="buildingmaintenance">Building Maintenance</string>
    <string name="watersupply">Water Supply</string>
    <string name="rentalvalue">Rental Value(Rs/Month)</string>
    <string name="roofingtype">Roofing Type</string>
    <string name="electrificationtype">Electrification Type</string>
    <string name="numberofgate">Number Of Gate</string>
    <string name="extraamenities">Extra Amenities </string>
    <string name="numberofcarparks">Number Of Car Parks</string>
    <string name="carparkvalue">Car Park Value</string>
    <string name="remarks">Remarks</string>
    <string name="generalcommentonspecification">General Cscomments on specification</string>
    <string name="plumbilgtype">Plumbing Type</string>
    <string name="compoundwall">Compound Wall</string>
    <string name="Openspacepavement">Open Space Pavement</string>
    <string name="SwimmingPool">Swimming Pool</string>
    <string name="Gym">Gym</string>
    <string name="Garden">Garden</string>
    <string name="Clubhouse">Club House</string>
    <string name="Carpark">Car Park</string>
    <string name="doordiscription">Door Description</string>
    <string name="kitchenplatfrom">Kitchen Platform</string>

    <string-array name="colorList">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>

    <string name="title_activity_services">Services</string>

    <!-- added by sandip -->


    <!-- Registration screen -->
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="location">Location</string>
    <string name="date_of_birth_hint">DD/MM/YYYY</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="term_n_conditions_decline">Decline</string>
    <string name="term_n_conditions_accept">Accept</string>

    <!-- Login screen -->
    <string name="remeber_me">Remember me</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="skip">&lt;&lt; <u>Skip</u></string>
    <string name="register">Register</string>
    <string name="cancel_icon">Register</string>
    <string name="correct_icon">Register</string>
    <string name="checkbox">Terms &amp; conditions</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="check_network">Please check network connection</string>
    <string name="jsonerror_message">Some thing went Wrong</string>
    <string name="all_workcompleted">All work completed</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_photo"> Add Photo</string>
    <string name="add_room">Add</string>
    <string name="title_activity_imagedetail">View Images</string>
    <string name="delete">Delete</string>
    <string name="delete_message"> Do you want delete this image?</string>
    <string name="mapview">Mapview Activity</string>
    <string name="rememberme">Remember Me</string>
    <string name="syncronicedata">Update </string>
    <string name="savelocal_datamessage">Do you want to store data local?</string>
    <string name="flat_no">Flat no</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="settings_logout_descrp">Do you want logout?</string>
    <string name="mark_ascompleted">Mark as completed</string>

</resources>