<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:dividerPadding="1dip"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="3" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/roomdetails" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:background="#90909090" />

            <Button
                android:id="@+id/xbtnCarpetdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/carpetdetails" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:background="#90909090" />

            <Button
                android:id="@+id/xbtnFlowerbeddetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flowerbeddetails" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:weightSum="6" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                 android:background="@drawable/edittext_medium"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/rooms"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                 android:background="@drawable/edittext_medium"
                android:gravity="center"
                android:padding="3dip"
                android:text="@string/flooring"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="3dip"
                 android:background="@drawable/edittext_medium"
                android:text="@string/doorsdiscription"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                 android:background="@drawable/edittext_medium"
                android:padding="3dip"
                android:text="@string/windowsdiscription"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                 android:background="@drawable/edittext_medium"
                android:padding="3dip"
               android:text="@string/kitchenplatform"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                 android:background="@drawable/edittext_medium"
                android:padding="3dip"
                  android:text="@string/wctype"
               
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/xlstRoomdetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"></ListView>

            <Button
                android:id="@+id/xbtnadd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="2dp"
                android:background="@drawable/button_background"
                android:text="@string/add_room"
                android:textColor="#FFFFFF" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>