<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techinvest.pcplrealestate.fragment.Flatspecifications" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dip"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/spinner3"
                android:layout_alignLeft="@+id/textView2"
                android:text="@string/compoundwall"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignLeft="@+id/spinner2"
                android:layout_alignRight="@+id/spinner2"
                android:layout_alignTop="@+id/spinner3"
                android:text="AutoCompleteTextView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/spinner3"
                android:layout_marginTop="30dp"
                android:text="@string/numberofgate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/spinner5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/spinner3"
                android:layout_alignRight="@+id/spinner3"
                android:text="AutoCompleteTextView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/textView4"
                android:text="@string/Openspacepavement"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="30dp"
                android:text="@string/extraamenities"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/spinner6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignLeft="@+id/spinner4"
                android:text="AutoCompleteTextView" />

            <AutoCompleteTextView
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignLeft="@+id/spinner1"
                android:layout_alignRight="@+id/spinner1"
                android:text="AutoCompleteTextView" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignLeft="@+id/spinner5"
                android:text="@string/SwimmingPool" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox4"
                android:layout_alignBottom="@+id/checkBox4"
                android:layout_toRightOf="@+id/checkBox4"
                android:text="@string/Carpark" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox1"
                android:layout_alignBottom="@+id/checkBox1"
                android:layout_toRightOf="@+id/checkBox1"
                android:text="@string/Gym" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="40dp"
                android:text="@string/roofingtype"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView1"
                android:layout_toRightOf="@+id/textView3"
                android:ems="10"
                android:text="AutoCompleteTextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/spinner2"
                android:layout_marginTop="30dp"
                android:text="@string/electrificationtype"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox2"
                android:layout_alignBottom="@+id/checkBox2"
                android:layout_toRightOf="@+id/checkBox2"
                android:text="@string/Garden" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView11"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignLeft="@+id/editText1"
                android:background="@drawable/edittextstyle2"
                android:ems="10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/checkBox3"
                android:layout_alignBottom="@+id/checkBox3"
                android:layout_alignLeft="@+id/textView6"
                android:text="@string/numberofcarparks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBox1"
                android:layout_below="@+id/checkBox1"
                android:text="@string/Clubhouse" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/spinner1"
                android:layout_marginLeft="38dp"
                android:layout_toRightOf="@+id/checkBox3"
                android:text="@string/plumbilgtype"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <AutoCompleteTextView
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_marginLeft="37dp"
                android:layout_toRightOf="@+id/textView6"
                android:ems="10"
                android:text="AutoCompleteTextView" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView9"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignLeft="@+id/spinner6"
                android:background="@drawable/edittextstyle2"
                android:ems="10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/checkBox5"
                android:layout_alignRight="@+id/textView2"
                android:text="@string/carparkvalue"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_alignTop="@+id/editText4"
                android:layout_toLeftOf="@+id/spinner2"
                android:text="@string/generalcommentonspecification"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignTop="@+id/textView10"
                android:background="@drawable/edittextstyle2"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_below="@+id/checkBox5"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/textView3"
                android:background="@drawable/edittextstyle2"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignTop="@+id/editText4"
                android:text="@string/remarks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/editText5"
                android:layout_below="@+id/editText5"
                android:layout_margin="10dp"
                android:background="@drawable/button_background"
                android:textColor="#FFFFFF"
                android:text="@string/save" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_alignLeft="@+id/editText4"
                android:layout_below="@+id/editText4"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextstyle2"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>